# depthai-rs

./: Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
depthai-sys/: Cargo.toml  build.rs
depthai-sys/src/: lib.rs
depthai-sys/tests/: modelzoo_error_thread_local.rs
depthai-sys/wrapper/: wrapper.cpp  wrapper.h
examples/: zoo_config.rs  zoo_download.rs  zoo_from_yaml.rs
src/: camera.rs  common.rs  device.rs  gate.rs  lib.rs  model_zoo.rs  pipeline.rs  queue.rs
tests/: hit_tests.rs
