[package]
name = "depthai-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
links = "depthai-core"
description = "Low-level FFI crate that builds/links Luxonis DepthAI-Core v3 and exposes Rust bindings."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/depthai-sys"
readme = "README.md"
keywords = ["depthai", "luxonis", "ffi", "bindings"]
categories = ["api-bindings", "computer-vision"]
include = [
	"Cargo.toml",
	"README.md",
	"build.rs",
	"src/**",
	"wrapper/**",
	"scripts/**",
]

[dependencies]
cxx.workspace = true
autocxx.workspace = true

[features]
native = [
	"dep:cmake",
	"dep:num_cpus",
	"dep:walkdir",
	"dep:zip-extensions",
	"dep:reqwest",
	"dep:pkg-config",
	"dep:zip",
]
opencv-download = ["dep:sevenz-rust2"]
no-native = []
force-binding-regeneration = []
default = ["native"]

# DepthAI-Core version selection.
#
# These are read by `build.rs` via `CARGO_FEATURE_*` environment variables.
# Only one of these should be enabled at a time.
latest = []
v3-3-0 = []
v3-2-1 = []
v3-2-0 = []
v3-1-0 = []

[package.metadata.docs.rs]
# docs.rs builds have strict time/network constraints. Building DepthAI-Core from source can time out,
# so we build in `no-native` mode (bindings-only) for documentation.
no-default-features = true
features = ["no-native"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
autocxx-build.workspace = true
cxx-build.workspace = true
cc = "1.2.51"
cmake = { version = "0.1.57", optional = true }
num_cpus = { version = "1.17.0", optional = true }
walkdir = { version = "2.5.0", optional = true }
once_cell = "1.21.3"
zip-extensions = { version = "0.13.0", optional = true }
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "native-tls", "http2"], optional = true }
sevenz-rust2 = { version = "0.20.0", optional = true }
pkg-config = { version = "0.3.32", optional = true }
zip = { version = "7.0.0", default-features = false, features = ["deflate"], optional = true }
